--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: php
+
 php:
-	- "5.5"
-	- "5.4"
-	- "5.3"
+  - 5.3.3
+  - 5.3
+  - 5.4
+
+before_script: composer install
+
+script: phpunit
