Added day2 number name generator class / test

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-0": {
-        	"Day01": "src/"
+        	"Day01": "src/",
+        	"Day02": "src/"
        	}
     }
 }
