Added mine detector class / test

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "autoload": {
         "psr-0": {
         	"Day01": "src/",
-        	"Day02": "src/"
+        	"Day02": "src/",
+        	"Day03": "src/",
+        	"Day04": "src/",
+        	"Day05": "src/"
        	}
     }
 }
