Added recently used list class / test for Day06

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         	"Day02": "src/",
         	"Day03": "src/",
         	"Day04": "src/",
-        	"Day05": "src/"
+        	"Day05": "src/",
+        	"Day06": "src/"
        	}
     }
 }
