Added template engine classes / tests

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         	"Day03": "src/",
         	"Day04": "src/",
         	"Day05": "src/",
-        	"Day06": "src/"
+        	"Day06": "src/",
+        	"Day07": "src/"
        	}
     }
 }
